--- a/pom.xml
+++ b/pom.xml
@@ -356,6 +356,13 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>${poi.version}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.pentahohub.nexus/alipay-sdk-java -->
+		<dependency>
+		    <groupId>com.alipay</groupId>
+		    <artifactId>alipay-sdk-java</artifactId>
+		    <version>20170307171631</version>
+		</dependency>
+		
   </dependencies>
   
    <!-- Package as an executable jar -->  
