完成部分业务接口

--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -6,7 +6,7 @@
 #maxIdle=10
 #maxWait=4000
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/photos?autoReconnect=true&useUnicode=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&characterEncoding=UTF-8&useSSL=false
+jdbc.url=jdbc:mysql://127.0.0.1:3306/photos?autoReconnect=true&useUnicode=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&rewriteBatchedStatements=true&characterEncoding=UTF-8&useSSL=false
 jdbc.username=root
 jdbc.password=123456
 jdbc.maxActive=150  
