--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="alipay-sdk-java20171201160035.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
